force-app/main/default/objects/ssot__Medication__dlm/fields/ssot__AlternateBrandName__c.field-meta.xml
<CustomField>
    <fullName>ssot__AlternateBrandName__c</fullName>
    <label>Alternate Brand Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AlternateBrandName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>