force-app/main/default/objects/ssot__Medication__dlm/fields/ssot__BatchNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__BatchNumber__c</fullName>
    <label>Batch Number</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BatchNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>