force-app/main/default/objects/ssot__Medication__dlm/fields/ssot__MedicationCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__MedicationCategory__c</fullName>
    <label>Medication Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MedicationCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>