force-app/main/default/objects/ssot__Medication__dlm/fields/ssot__MedicationFormId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MedicationFormId__c</fullName>
    <label>Medication Form</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MedicationFormId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>