force-app/main/default/objects/ssot__Medication__dlm/fields/ssot__MedicationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__MedicationStatus__c</fullName>
    <label>Medication Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MedicationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>