force-app/main/default/objects/ssot__Medication__dlm/fields/ssot__QuantityDenominatorUnitId__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuantityDenominatorUnitId__c</fullName>
    <label>Quantity Denominator Unit</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuantityDenominatorUnitId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>