force-app/main/default/objects/ssot__Medication__dlm/fields/ssot__QuantityUnitId__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuantityUnitId__c</fullName>
    <label>QuantityUnit</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuantityUnitId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>