force-app/main/default/objects/ssot__Medication__dlm/fields/ssot__rel_1716725644290_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716725644290_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medication_ManufacturerId_map_Accoun_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>Medication_ManufacturerId_map_Accoun_rel</relationshipLabel>
    <relationshipName>rel_1716725644290_end</relationshipName>
    <type>Lookup</type>
</CustomField>