force-app/main/default/objects/ssot__Medication__dlm/fields/ssot__rel_1716725648680_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716725648680_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medication_MedicationFormId_map_Code_rel</label>
    <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
    <relationshipLabel>Medication_MedicationFormId_map_Code_rel</relationshipLabel>
    <relationshipName>rel_1716725648680_end</relationshipName>
    <type>Lookup</type>
</CustomField>