force-app/main/default/objects/ssot__Medication__dlm/fields/ssot__rel_1720283036912_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720283036912_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medication_QuantityUnitId_map_UnitOf_rel</label>
    <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
    <relationshipLabel>Medication_QuantityUnitId_map_UnitOf_rel</relationshipLabel>
    <relationshipName>rel_1720283036912_end</relationshipName>
    <type>Lookup</type>
</CustomField>